--- a/atividades/atividade002/cliente.html
+++ b/atividades/atividade002/cliente.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/estilo.css" />
+      <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Atividade 002</title>
   </head>
 
   <body>
     <header class="principal">
-      <h1>Venha construir o seu edifício dos sonhos conosco I-Desing</h1>
-      <p>
-        Nossa empresa I-Design atua na área de projetos arquitetônicos Esses
-        projetos são a base para a construção de qualquer edificação, fornecendo
-        detalhes técnicos, informações e representações gráficas (plantas,
-        cortes, fachadas, etc.) que permitem a compreensão e a execução da ideia
-        projetual.
-      </p>
     </header>
     <nav class="menu">
       <ul>
@@ -26,3 +20,42 @@
         <li><a href="cliente.html">Clientes</a></li>
         <li><a href="contato.html">Contatos</a></li>
       </ul>
+    </nav>
+    <section class="clientes">
+      <article class="caixa-cliente">
+        <img src="img/indonesian_halal_logo_2022.jpg" alt="sala">
+        <h2>Indonesian Halal</h2>
+        <p>
+          <span>Descrição:</span> <br>Empresa no comércio de football
+        </p>
+        <p>
+          <span>Destaque técnico:</span> <br>Ótimo estádio, perfeito para o treinamento dos jogadores!
+        </p>
+      </article>
+      <article class="caixa-cliente">
+        <img src="img/7.jpg" alt="casa-isolada">
+        <h2>Lorem Ipsum</h2>
+        <p>
+          <span>Descrição:</span> <br>Empresa que protege o meio ambiente das melhores formas possíveis.
+        </p>
+        <p>
+          <span>Comentário:</span> <br>Criou uma estrutura ótima para os animais, ótimo trabalho!
+        </p>
+      </article>
+      <article class="caixa-cliente">
+        <img src="img/40626.jpg" alt="loja">
+        <h2>Bycicle Shoop</h2>
+        <p>
+          <span>Descrição:</span> <br>Loja de bicicleta!
+        </p>
+        <p>
+          <span>Destaque técnico:</span> <br>Integração total entre vitrine e provadores com iluminação cênica!
+        </p>
+      </article>
+    </section>
+    <a class="link" href="contato.html">Entre em contrato conosco!</a>
+    <footer>
+      <p>&copy; Direitos autorais reservados para o Mr. Renan, Mr. Sérgio e Kayky Eduardo.</p>
+    </footer>
+  </body>
+</html>
