--- a/atividades/atividade002/index.html
+++ b/atividades/atividade002/index.html
@@ -26,8 +26,8 @@
         <li><a href="contato.html">Fale conosco!</a></li>
       </ul>
     </nav>
-    <section>
-      <article>
+    <section class="conteudo-home">
+      <article class="caixa-home">
         <p>
           Nossa empresa I-Design atua na área de projetos arquitetônicos. Esses
           projetos são a base para a construção de qualquer edificação,
@@ -36,6 +36,13 @@
           execução da ideia projetual.
         </p>
       </article>
+      <article class="caixa-home">
+        <p>
+          Somos especialistas em projetos arquitetônicos com design moderno, funcional e elegante.
+          Criamos espaços que valorizam o dia a dia das pessoas e refletem suas ideias com estilo.
+        </p>
+      </article>
     </section>
+    <a class="link" href="sobre.html">Saiba mais sobre nós!</a>
   </body>
 </html>
