--- a/atividades/atividade002/portfolio.html
+++ b/atividades/atividade002/portfolio.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/estilo.css" />
+      <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Atividade 002</title>
   </head>
 
   <body>
     <header class="principal">
-      <h1>Venha construir o seu edifício dos sonhos conosco I-Desing</h1>
-      <p>
-        Nossa empresa I-Design atua na área de projetos arquitetônicos Esses
-        projetos são a base para a construção de qualquer edificação, fornecendo
-        detalhes técnicos, informações e representações gráficas (plantas,
-        cortes, fachadas, etc.) que permitem a compreensão e a execução da ideia
-        projetual.
-      </p>
     </header>
     <nav class="menu">
       <ul>
@@ -26,3 +20,58 @@
         <li><a href="cliente.html">Clientes</a></li>
         <li><a href="contato.html">Contatos</a></li>
       </ul>
+    </nav>
+    <h1 class="titulo-projeto">Projetos</h1>
+    <section class="projetos">
+      <article class="caixa-projetos">
+        <img src="img/sala_de_estar.jpg" alt="sala">
+        <h2>Residência Silva - São Paulo/SP</h2>
+        <p>
+          <span>Descrição:</span> <br>O cliente buscava iluminação natural sem abrir mão da privacidade.
+          Trabalhamos com planos cruzados, aberturas zenitais e soluções estruturais otimizadas para isso.
+        </p>
+        <p>
+          <span>Destaque técnico:</span> <br>Parede dupla com isolamento térmico acústico em área urbana.
+          (Fotos otimizadas, com legenda e boa visibilidade mobile)
+        </p>
+      </article>
+      <article class="caixa-projetos">
+        <img src="img/casa-isolada-no-campo.jpg" alt="casa-isolada">
+        <h2>Residencial unifamiliar - Rio de Janeiro/RJ</h2>
+        <p>
+          <span>Descrição:</span> <br>Terreno com aclive acentuado exigiu solução em dois níveis com platôs integrados. Volumetria moderna,
+           painéis de vidro amplos e telhado invertido para captação de água da chuva.
+        </p>
+        <p>
+          <span>Destaque técnico:</span> <br>Estratégia de ventilação cruzada passiva + paisagismo funcional
+        </p>
+      </article>
+      <article class="caixa-projetos">
+        <img src="img/loja.jpg" alt="loja">
+        <h2>Comercial / Varejo - Minas Gerais/MG</h2>
+        <p>
+          <span>Descrição:</span> <br>Desenvolvido para expressar identidade visual da marca no espaço físico.
+          Fachada em brises verticais e iluminação difusa. Layout modular para permitir alterações sazonais.
+        </p>
+        <p>
+          <span>Destaque técnico:</span> <br>Integração total entre vitrine e provadores com iluminação cênica.
+        </p>
+      </article>
+      <article class="caixa-projetos">
+        <img src="img/coperativo.jpg" alt="cooperativo">
+        <h2>Corporativo - Bahia/BA</h2>
+        <p>
+          <span>Descrição:</span><br>
+          Espaço de 300 m² com foco em produtividade e bem-estar. Open space zonado com áreas de foco e colaboração.
+          Materiais acústicos, mobiliário ergonômico e sala de descompressão.
+        </p>
+        <p>
+          <span>Destaque técnico:</span> <br>Projeto em BIM para compatibilização das instalações com obra seca.
+        </p>
+      </article>
+    </section>
+    <a class="link" href="cliente.html">Conheça nossos clientes!</a>
+    <footer>
+      <p>&copy; Direitos autorais reservados para o Mr. Renan, Mr. Sérgio e Kayky Eduardo.</p>
+    </footer>
+  </body>
