--- a/atividades/atividade002/sobre.html
+++ b/atividades/atividade002/sobre.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/estilo.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Atividade 002</title>
   </head>
 
   <body>
     <header class="principal">
-      <h1>Venha construir o seu edifício dos sonhos conosco I-Desing</h1>
-      <p>
-        Nossa empresa I-Design atua na área de projetos arquitetônicos Esses
-        projetos são a base para a construção de qualquer edificação, fornecendo
-        detalhes técnicos, informações e representações gráficas (plantas,
-        cortes, fachadas, etc.) que permitem a compreensão e a execução da ideia
-        projetual.
-      </p>
     </header>
     <nav class="menu">
       <ul>
@@ -26,3 +20,47 @@
         <li><a href="cliente.html">Clientes</a></li>
         <li><a href="contato.html">Contatos</a></li>
       </ul>
+    </nav>
+    <section class="inicio-sobre">
+      <article class="caixa-sobre">
+        <h3>Origem da I-Design</h3>
+        <p>
+          A i-design nasceu em 2012, unindo o olhar técnico de Kayky o "Conquistador" com a sensibilidade estética de Kayky o "Lindo".
+          Desde o início, nosso foco foi claro: transformar espaços em soluções arquitetônicas que comunicam, organizam e inspiram.
+        </p>
+      </article>
+    </section>
+    <h1 class="titulo-oque-nos-move">Oque nos move</h1>
+    <section class="oque-nos-move"> 
+      <article class="caixa-move">
+        <h3>Missão</h3>
+        <p>
+          Criar projetos arquitetônicos que equilibram forma, função e experiência.
+        </p>
+      </article>
+      <article class="caixa-move">
+        <h3>Visão</h3>
+        <p>
+          Ser referência em arquitetura autoral com responsabilidade técnica e impacto real.
+        </p>
+      </article>
+      <article class="caixa-move">
+        <h3>Valores</h3>
+        <p>
+          Ética no processo, clareza na comunicação, entrega sem atalhos.
+        </p>
+      </article>
+    </section>
+    <h1 class="nosso-time">Nosso time</h1>
+    <section class="time">
+      <div class="container-time">
+        <img src="img/jovem-barbudo-com-camiseta-branca.jpg" alt="equipe">
+        <img src="img/cintura-cima.jpg" alt="equipe">
+      </div>
+    </section>
+    <a class="link" href="portfolio.html">Nossos projetos!</a>
+    <footer>
+      <p>&copy; Direitos autorais reservados para o Mr. Renan, Mr. Sérgio e Kayky Eduardo.</p>
+    </footer>
+  </body>
+</html>
