--- a/atividades/atividade002/cliente.html
+++ b/atividades/atividade002/cliente.html
@@ -29,7 +29,7 @@
           <span>Descrição:</span> <br>Empresa no comércio de football
         </p>
         <p>
-          <span>Destaque técnico:</span> <br>Ótimo estádio, perfeito para o treinamento dos jogadores!
+          <span>Comentário:</span> <br>Ótimo estádio, perfeito para o treinamento dos jogadores!
         </p>
       </article>
       <article class="caixa-cliente">
@@ -49,7 +49,7 @@
           <span>Descrição:</span> <br>Loja de bicicleta!
         </p>
         <p>
-          <span>Destaque técnico:</span> <br>Integração total entre vitrine e provadores com iluminação cênica!
+          <span>Comentário:</span> <br>Integração total entre vitrine e provadores com iluminação cênica!
         </p>
       </article>
     </section>
