--- a/atividades/atividade002/contato.html
+++ b/atividades/atividade002/contato.html
@@ -26,10 +26,10 @@
         <h2>Entre em Contato!</h2>
 
         <form class="form-contato" method="POST">
-          <input type="text" name="nome" required />
-          <input type="email" name="email" required />
-          <input type="tel" name="telefone"/>
-          <textarea name="mensagem" ></textarea>
+          <input type="text" placeholder="Digite seu nome..." name="nome" required />
+          <input type="email" name="email" placeholder="Seu email..." required />
+          <input type="tel" placeholder="telefone" name="telefone"/>
+          <textarea name="mensagem" placeholder="Mensagem"></textarea>
           <button type="submit">Enviar mensagem</button>
         </form>
 
