--- a/atividades/atividade002/contato.html
+++ b/atividades/atividade002/contato.html
@@ -25,7 +25,7 @@
       <div class="contato-container">
         <h2>Entre em Contato!</h2>
 
-        <form class="form-contato" method="POST">
+        <form class="form-contato">
           <input type="text" placeholder="Digite seu nome..." name="nome" required />
           <input type="email" name="email" placeholder="Seu email..." required />
           <input type="tel" placeholder="telefone" name="telefone"/>
