--- a/aulas/aula009/bordas_opacidade/object_fit/index.html
+++ b/aulas/aula009/bordas_opacidade/object_fit/index.html
@@ -93,7 +93,7 @@
                     <code>background: linear-gradient(45deg, red, orange)</code>
                 </div>
                 <div class="exemplo-gradiente gradiente-multiplo">
-                    <h3>Gradiente com Multiplas cores</h3>
+                    <h3>Multiplas cores</h3>
                     <code>
                         background: linear-gradient(to rigth, red, orange, yellow, green, blue,
                         indigo, violet);
