--- a/atividades/atividade003/index.html
+++ b/atividades/atividade003/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="petshop.html">Petshop</a></li>
-        <li><a href="servicos.html">Nossos serviços!</a></li>
+        <li><a href="servicos.html">Nossos serviços</a></li>
         <li><a href="contato.html">Fale conosco!</a></li>
       </ul>
     </nav>
@@ -73,7 +73,6 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="petshop.html">Petshop</a></li>
             <li><a href="servicos.html">Nossos serviços!</a></li>
-            <li><a href="cliente.html">Clientes</a></li>
             <li><a href="contato.html">Fale conosco!</a></li>
         </ul>
     </footer>
