--- a/atividades/atividade003/contato.html
+++ b/atividades/atividade003/contato.html
@@ -24,7 +24,7 @@
         <h1>Entre em Contato!</h1>
         <section class="formulario">
             <article>
-                <h1>Nossos contatos</h1>
+                <h2 class="nossos-contatos">Nossos contatos</h2>
                 <div>
                     <h3>Números</h3>
                     <p><strong>Telefone(fixo):</strong> (32) 3141-5262</p>
@@ -39,7 +39,7 @@
                     <p>Rua juscelino, nº210 – JF/MG</p>
                 </div>
             </article>
-            <hr>
+            <div class="vertical"></div>
             <form class="form-contato">
                 <input type="text" placeholder="Digite seu nome..." name="nome" required />
                 <input type="email" name="email" placeholder="Seu email..." required />
