--- a/atividades/atividade003/index.html
+++ b/atividades/atividade003/index.html
@@ -20,7 +20,7 @@
         <li><a href="contato.html">Fale conosco!</a></li>
       </ul>
     </nav>
-    <main>
+    <main class="main-azul">
         <h1 class="quem-somos">Quem somos</h1>
         <section class="conteudo-home">
             <article class="caixa-home">
