Esqueci de comentar em casa

--- a/atividades/atividade003/petshop.html
+++ b/atividades/atividade003/petshop.html
@@ -29,16 +29,22 @@
                 <img src="img/kit-brinquedo.jpg" alt="kit-brinquedo">
                 <h3>Kit de Brinquedos</h3>
                 <p>Kit de brinquedos para o seu cachorro gastar toda a energia canina.</p>
+                <br>
+                <p><strong>Preço:</strong> 49,99</p>
             </article>
             <article class="caixa">
                 <img src="img/kit-brinquedo.jpg" alt="kit-brinquedo">
                 <h3>Kit de Brinquedos</h3>
                 <p>Kit de brinquedos para o seu cachorro gastar toda a energia canina.</p>
+                <br>
+                <p><strong>Preço:</strong> 49,99</p>
             </article>
             <article class="caixa">
                 <img src="img/kit-brinquedo.jpg" alt="kit-brinquedo">
                 <h3>Kit de Brinquedos</h3>
                 <p>Kit de brinquedos para o seu cachorro gastar toda a energia canina.</p>
+                <br>
+                <p><strong>Preço:</strong> 49,99</p>
             </article>
         </section>
         <h2>Petiscos</h2>
@@ -46,20 +52,32 @@
             <article class="caixa">
                 <img src="img/petisco-chapisco.jpg" alt="petisco-chapisco">
                 <h3>Petiscos Chapiscos</h3>
-                <p>Petiscos com sabores diversificados para deixa o seu cachorro alegre e de barriga cheia.<br>
-                sabores: Gengibre, Limão, Melância, Carne, Osso.</p>
+                <p>
+                    Petiscos com sabores diversificados para deixa o seu cachorro alegre e de barriga cheia.<br>
+                    sabores: Gengibre, Limão, Melância, Carne, Osso.
+                </p>
+                <br>
+                <p><strong>Preço: </strong> 27,99</p>
             </article>
             <article class="caixa">
                 <img src="img/petisco-chapisco.jpg" alt="petisco-chapisco">
                 <h3>Petiscos Chapiscos</h3>
-                <p>Petiscos com sabores diversificados para deixa o seu cachorro alegre e de barriga cheia.<br>
-                sabores: Gengibre, Limão, Melância, Carne, Osso.</p>
+                <p>
+                    Petiscos com sabores diversificados para deixa o seu cachorro alegre e de barriga cheia.<br>
+                    sabores: Gengibre, Limão, Melância, Carne, Osso.
+                </p>
+                <br>
+                <p><strong>Preço: </strong> 27,99</p>
             </article>
             <article class="caixa">
                 <img src="img/petisco-chapisco.jpg" alt="petisco-chapisco">
                 <h3>Petiscos Chapiscos</h3>
-                <p>Petiscos com sabores diversificados para deixa o seu cachorro alegre e de barriga cheia.<br>
-                sabores: Gengibre, Limão, Melância, Carne, Osso.</p>
+                <p>
+                    Petiscos com sabores diversificados para deixa o seu cachorro alegre e de barriga cheia.<br>
+                    sabores: Gengibre, Limão, Melância, Carne, Osso.
+                </p>
+                <br>
+                <p><strong>Preço: </strong> 27,99</p>
             </article>
         </section>
         <h2>Rações</h2>
@@ -71,6 +89,8 @@
                     Compre a ração que possui 301 mil nutrientes que o seu cachorro PRECISA!
                     Esta ração ira trazer paz para você e saúde para o cachorro, faça seu dogo feliz!
                 </p>
+                <br>
+                <p><strong>Preço: </strong>79,99</p>
             </article>
             <article class="caixa">
                 <img src="img/8488709.jpg" alt="racao">
@@ -79,6 +99,8 @@
                     Compre a ração que possui 301 mil nutrientes que o seu cachorro PRECISA!
                     Esta ração ira trazer paz para você e saúde para o cachorro, faça seu dogo feliz!
                 </p>
+                <br>
+                <p><strong>Preço: </strong>79,99</p>
             </article>
             <article class="caixa">
                 <img src="img/8488709.jpg" alt="racao">
@@ -87,6 +109,8 @@
                     Compre a ração que possui 301 mil nutrientes que o seu cachorro PRECISA!
                     Esta ração ira trazer paz para você e saúde para o cachorro, faça seu dogo feliz!
                 </p>
+                <br>
+                <p><strong>Preço: </strong>79,99</p>
             </article>
         </section>
     </main>
