--- a/atividades/atividade004_bootstrap/index.html
+++ b/atividades/atividade004_bootstrap/index.html
@@ -9,11 +9,11 @@
 <body>
     <nav class="menu d-flex justify-content-center sticky-top p-3 bg-dark">
       <ul class="list-inline sticky-top">
-        <li class="list-inline-item "><a class="text-decoration-none text-white" href="#home">Home</a></li>
+        <li class="list-inline-item"><a class="text-decoration-none text-white" href="#home">Home</a></li>
         <li class="list-inline-item"><a class="text-decoration-none text-white" href="#formacao">Formação</a></li>
         <li class="list-inline-item"><a class="text-decoration-none text-white" href="#experiencia">Experiência</a></li>
         <li class="list-inline-item"><a class="text-decoration-none text-white" href="#cursos">Cursos</a></li>
-        <li class="list-inline-item"><a class="text-decoration-none text-white" href="#habilidaes_especificas">Habilidade pessoais</a></li>
+        <li class="list-inline-item"><a class="text-decoration-none text-white" href="#habilidades_especificas">Habilidade pessoais</a></li>
         <li class="list-inline-item"><a class="text-decoration-none text-white" href="#projetos">Projetos</a></li>
       </ul>
     </nav>
@@ -22,7 +22,7 @@
             <img src="img/cachorro.png" alt="foto">
             <h1 class="display-6 fw-bold mb-4">Resumo</h1>
             <p>
-                Sou desenvolvedor back-end com mais de 7 anos de experiência em construção de sistemas robustos,
+                Sou desenvolvedor back-end com mais de 1 ano de experiência em construção de sistemas robustos,
                 escaláveis e seguros. Especialista em arquitetura de APIs, microsserviços e integração entre plataformas,
                 também possuo sólidos conhecimentos em front-end, redes e administração de servidores Linux.
             </p>
@@ -41,7 +41,7 @@
         <section id="experiencia" class="mt-4 pt-5 text-center">
             <h2 class="fw-bold text-center mb-4 pb-4">Experiência</h2>
             <article>
-                <h4>Freelancer</h3>
+                <h4>Freelancer</h4>
                 <p>Data: 2024 - 2025</p>
                 <p>
                     Neste período desenvolvi pequenos sistemas para lojas locais
@@ -84,9 +84,9 @@
                 <li class="fw-bold mb-1">Aprendizado contínuo</li>
             </ul>
         </section>
-        <h3 class="mb-2 mt-5 pb-4 text-center fw-bold">Projetos</h3>
-        <section id="projetos" class="d-flex flex-row flex-nowrap mt-2 pt-5 text-center">
-            <article class="w-50">
+        <section id="projetos" class="mt-2 pt-5 text-center">
+            <h3 class="mb-2 mt-5 pb-4 text-center fw-bold">Projetos</h3>
+            <article class="mb-5">
                 <img src="" alt="">
                 <a class="text-decoration-none" href="https://github.com/Kayky-Eduardo/Controle_de_Estoque"><h3>Controle de Estoque</h3></a>
                 <p>
@@ -95,8 +95,12 @@
                     setores, cargos, vendas. E ao mesmo tempo acompanhar um relatório da situação.
                 </p>
             </article>
-            <article>
-
+            <article class="mb-5">
+                <a class="text-decoration-none" href="https://github.com/Kayky-Eduardo/projetos_python"><h3>Conjunto de soluções</h3></a>
+                <p>
+                    Este é um projeto onde resolvo diversos problemas relacionados ao agendamento e organização de viagens, festas, casamentos e etc.
+                    Este sistema foi criado com a intenção de agilizar e facilitar processos longos e cansativos.
+                </p>
             </article>
         </section>
     </main>
