--- a/atividades/atividade004_bootstrap/index.html
+++ b/atividades/atividade004_bootstrap/index.html
@@ -87,7 +87,7 @@
         <section id="projetos" class="mt-2 pt-5 text-center">
             <h3 class="mb-2 mt-5 pb-4 text-center fw-bold">Projetos</h3>
             <article class="mb-5">
-                <img src="" alt="">
+                <img src="img/06.png" alt="c-estoque">
                 <a class="text-decoration-none" href="https://github.com/Kayky-Eduardo/Controle_de_Estoque"><h3>Controle de Estoque</h3></a>
                 <p>
                     Este é um projeto utilizado para controlar uma loja que venda qualquer tipo de produto.
@@ -96,7 +96,8 @@
                 </p>
             </article>
             <article class="mb-5">
-                <a class="text-decoration-none" href="https://github.com/Kayky-Eduardo/projetos_python"><h3>Conjunto de soluções</h3></a>
+                <img src="img/casamento.png" alt="organizacao">
+                <a class="text-decoration-none" href="https://github.com/Kayky-Eduardo/projetos_python/tree/master/aulas_senac/aula14_dicionarios"><h3>Conjunto de soluções</h3></a>
                 <p>
                     Este é um projeto onde resolvo diversos problemas relacionados ao agendamento e organização de viagens, festas, casamentos e etc.
                     Este sistema foi criado com a intenção de agilizar e facilitar processos longos e cansativos.
