--- a/atividades/atividade004_bootstrap/index.html
+++ b/atividades/atividade004_bootstrap/index.html
@@ -13,7 +13,7 @@
         <li class="list-inline-item"><a class="text-decoration-none text-white" href="#formacao">Formação</a></li>
         <li class="list-inline-item"><a class="text-decoration-none text-white" href="#experiencia">Experiência</a></li>
         <li class="list-inline-item"><a class="text-decoration-none text-white" href="#cursos">Cursos</a></li>
-        <li class="list-inline-item"><a class="text-decoration-none text-white" href="#habilidades_especificas">Habilidade pessoais</a></li>
+        <li class="list-inline-item"><a class="text-decoration-none text-white" href="#habilidade_especificas">Habilidade pessoais</a></li>
         <li class="list-inline-item"><a class="text-decoration-none text-white" href="#projetos">Projetos</a></li>
       </ul>
     </nav>
